switched from flexbox to css-grid to avoid margin-left for auto-aligning

--- a/src/components/section/work/style.scss
+++ b/src/components/section/work/style.scss
@@ -4,10 +4,16 @@
 
 .personal-pro {
   outline: 1px solid red;
-  display: flex;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
-  align-items: center;
-  margin-bottom: 20px;
-  margin-left: -20px;
+  grid-template-columns: 1fr 1fr 1fr;
+  // grid-template-columns: repeat(auto-fill, auto-fill);
+  grid-column-gap: 1em;
+  display: grid;
+  grid-column-gap: em(20);
+  grid-row-gap: em(10);
+
+  
+  // justify-content: space-evenly;
+  // align-items: center;
+  // flex-wrap: wrap;
+  // margin-left: -20px;
 }
